--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@ django==1.9
 django-toolbelt==0.0.1
 django-registration==2.1.2
 bokeh==0.12.0
-pandas==0.18.1
 django-debug-toolbar==1.5
 raven==5.31.0
+
+# cython is needed to compile pandas
+cython==0.24.1
+
+# pandas is used in bokeh.charts
+pandas==0.18.1
